[gd_scene load_steps=8 format=3 uid="uid://bhg3bk0eojpef"]

[ext_resource type="Script" path="res://src/title_interface.gd" id="1_ic3qv"]
[ext_resource type="PackedScene" uid="uid://o4pjvvpcbgku" path="res://assets/scenes/title_home.tscn" id="2_2yb1l"]
[ext_resource type="PackedScene" uid="uid://dqv85mwq11dpo" path="res://assets/scenes/world_creator.tscn" id="4_jccja"]
[ext_resource type="PackedScene" uid="uid://vw0n0v6gcdcl" path="res://assets/scenes/world_loader.tscn" id="4_yb5tt"]
[ext_resource type="PackedScene" uid="uid://cn6nx0dd15xf6" path="res://assets/scenes/settings_menu.tscn" id="6_an6vf"]
[ext_resource type="PackedScene" uid="uid://bwsftfna5831c" path="res://assets/scenes/addons_menu.tscn" id="6_ie735"]
[ext_resource type="PackedScene" uid="uid://b8shgrgj8nnmd" path="res://assets/scenes/credits_menu.tscn" id="7_e3woi"]

[node name="TitleInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ic3qv")

[node name="TitleHome" parent="." instance=ExtResource("2_2yb1l")]
layout_mode = 1

[node name="WorldLoader" parent="." instance=ExtResource("4_yb5tt")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -42.0
offset_right = 88.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="WorldCreator" parent="." instance=ExtResource("4_jccja")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -148.0
offset_right = 238.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsMenu" parent="." instance=ExtResource("6_an6vf")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -108.0
offset_right = 142.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="AddonsMenu" parent="." instance=ExtResource("6_ie735")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -20.0
offset_right = 84.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsMenu" parent="." instance=ExtResource("7_e3woi")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
